--- a/25 Agosto/.env
+++ b/25 Agosto/.env
@@ -1,3 +1,2 @@
-OPENAI_BASE_URL="http://localhost:1234/v1"
-OPENAI_API_KEY="not-needed"
-LMSTUDIO_MODEL="mistral"
+AZURE_OPENAI_EMBEDDING_NAME=text-embedding-ada-002
+AZURE_OPENAI_CHAT_COMPLETION_NAME=gpt-4o
