Fix all project and Exercise 2
Refactor internet_flow.py for first exercise, math_crew.py and search_crew.py for the second exercise.

--- a/26 Agosto flows/progetto_crew_flows/src/progetto_crew_flows/crews/search_crew/config/tasks.yaml
+++ b/26 Agosto flows/progetto_crew_flows/src/progetto_crew_flows/crews/search_crew/config/tasks.yaml
@@ -13,6 +13,8 @@ write_section_task:
   expected_output: >
     A well-structured, comprehensive section in Markdown format ...
   agent: content_writer
+  context:
+    - search_section_task
 
 review_section_task:
   description: >
