--- a/26 Agosto flows/progetto_crew_flows/pyproject.toml
+++ b/26 Agosto flows/progetto_crew_flows/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.10,<3.14"
 dependencies = [
     "crewai[tools]>=0.165.1,<1.0.0",
     "duckduckgo-search>=6.2.0",
+    "faiss-cpu>=1.12.0",
 ]
 
 [project.scripts]
