--- a/26 Agosto flows/progetto_crew_flows/pyproject.toml
+++ b/26 Agosto flows/progetto_crew_flows/pyproject.toml
@@ -8,6 +8,12 @@ dependencies = [
     "crewai[tools]>=0.165.1,<1.0.0",
     "duckduckgo-search>=6.2.0",
     "faiss-cpu>=1.12.0",
+    "certifi>=2024.0.0",
+    "httpx>=0.25.0",
+    "langchain-openai>=0.1.0",
+    "langchain-community>=0.2.0",
+    "python-dotenv>=1.0.0",
+    "pydantic>=2.0.0",
 ]
 
 [project.scripts]
