--- a/26 Agosto flows/progetto_crew_flows/src/progetto_crew_flows/crews/database_crew/config/tasks.yaml
+++ b/26 Agosto flows/progetto_crew_flows/src/progetto_crew_flows/crews/database_crew/config/tasks.yaml
@@ -1,13 +1,13 @@
 generation_documents_task:
   description: >
     Generate exactly {docs_per_topic} documents ONCE for each topic in the knowledge base: {topic}.
-    Use the generate_documents tool with topics={topics}, docs_per_topic={docs_per_topic}, max_tokens_per_doc={max_tokens_per_doc}, batch_size={batch_size}.
+    Use the generate_documents_as_files tool with topics={topics}, docs_per_topic={docs_per_topic}, max_tokens_per_doc={max_tokens_per_doc}, batch_size={batch_size}.
     DO NOT repeat document generation for the same topics.
-    The documents will be created using a Large Language Model (LLM) with different perspectives
-    to provide comprehensive coverage.
+    Each document will be saved as an individual JSON file in a structured directory format.
+    This approach ensures clean separation between documents and eliminates JSON parsing issues.
   expected_output: >
-    List of generated documents with confirmation that exactly {docs_per_topic} documents per topic have been created for all {topics} topics.
-    Return the generated documents list directly from the generate_documents tool.
+    JSON response from generate_documents_as_files tool confirming that exactly {docs_per_topic} individual JSON files per topic have been created for all {topics} topics.
+    Return the complete response including file paths and generation statistics.
   agent: document_generator
 
 create_database_task:
@@ -20,19 +20,22 @@ create_database_task:
 
 store_documents_task:
   description: >
-    Store the generated documents from generation_documents_task in the RAG database using the store_in_vectordb tool.
+    Load and store ALL individual document JSON files created by the generation_documents_task.
     
-    IMPORTANT: The previous task returned a JSON string containing a list of documents. 
-    You must pass this EXACT JSON string as the 'content' parameter to store_in_vectordb.
+    Use the store_individual_documents tool which will:
+    1. Find all JSON document files in the documents directory
+    2. Load each file individually (no JSON parsing issues)
+    3. Create chunks from each document separately
+    4. Store all chunks in the vector database with proper metadata
     
-    Example call: store_in_vectordb(content="[{\"topic\": \"medicine - cardiology\", \"content\": \"...\", ...}]")
+    Call: store_individual_documents()
     
-    DO NOT modify, parse, or reformat the JSON string from the previous task.
-    DO NOT wrap it in additional dictionaries or structures.
-    Pass it directly as received from the document generation task.
-    
-    Call the tool only ONCE with all documents.
-    DO NOT repeat storage for the same documents.
+    This approach processes each document file individually, ensuring proper topic/subject separation
+    and eliminating the JSON parsing issues from the previous approach.
   expected_output: >
-    Confirmation message from store_in_vectordb tool that all documents have been successfully stored in the RAG database with chunk count and topic information.
+    Detailed JSON response from store_individual_documents tool showing:
+    - Number of document files processed
+    - Number of chunks created and stored
+    - Distribution of chunks by subject/topic
+    - Complete success confirmation for all medicine, football, and technology documents
   agent: database_engineer
