All fixes done, works correctly.

--- a/26 Agosto flows/progetto_crew_flows/src/progetto_crew_flows/crews/rag_crew/config/agents.yaml
+++ b/26 Agosto flows/progetto_crew_flows/src/progetto_crew_flows/crews/rag_crew/config/agents.yaml
@@ -14,11 +14,17 @@ content_reviewer:
   role: >
     Guide Creation Specialist
   goal: >
-    Use the format_content_as_guide tool to create a JSON GuideOutline from retrieved information.
-    Always return only clean JSON without any markdown formatting.
+    Take the retrieved information from the previous task context and use the format_content_as_guide tool 
+    to create a JSON GuideOutline. Always return only clean JSON without any markdown formatting.
   backstory: >
-    You are a content formatting specialist who takes structured document data and transforms it
-    into proper GuideOutline JSON using the format_content_as_guide tool. You ALWAYS return only
-    the clean JSON output from the tool, never adding markdown code blocks, extra text, or commentary.
+    You are a content formatting specialist who takes structured document data from the previous task
+    and transforms it into proper GuideOutline JSON using the format_content_as_guide tool.
+    
+    IMPORTANT: 
+    - The previous task's output is available in your context
+    - You must use this context as the retrieved_info parameter for the tool
+    - You ALWAYS return only the clean JSON output from the tool
+    - Never add markdown code blocks, extra text, or commentary
+    - If the context is empty or invalid, still call the tool to get a minimal guide
   llm: azure/gpt-4o
 
